[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/settings_menu.gd" type="Script" id=1]
[ext_resource path="res://temp music/brainstorming5.mp3" type="AudioStream" id=2]
[ext_resource path="res://temp music/Item_collect.mp3" type="AudioStream" id=3]

[node name="SettIngs menu" type="Control"]
anchor_left = 0.4
anchor_top = 0.25
anchor_right = 0.6
anchor_bottom = 0.75
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 214.0
margin_bottom = 300.0

[node name="MasterVolume" type="VSplitContainer" parent="VBoxContainer"]
margin_right = 214.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="VBoxContainer/MasterVolume"]
margin_right = 214.0
margin_bottom = 14.0
text = "Master Volume"

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/MasterVolume"]
margin_top = 26.0
margin_right = 214.0
margin_bottom = 42.0
split_offset = 140

[node name="HSlider" type="HSlider" parent="VBoxContainer/MasterVolume/HSplitContainer"]
margin_right = 156.0
margin_bottom = 16.0
value = 100.0
tick_count = 4

[node name="Label" type="Label" parent="VBoxContainer/MasterVolume/HSplitContainer"]
margin_left = 168.0
margin_top = 1.0
margin_right = 214.0
margin_bottom = 15.0
text = "100"

[node name="MusicVolume" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 214.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="VBoxContainer/MusicVolume"]
margin_right = 214.0
margin_bottom = 14.0
text = "Music Volume"

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/MusicVolume"]
margin_top = 26.0
margin_right = 214.0
margin_bottom = 42.0
split_offset = 140

[node name="HSlider" type="HSlider" parent="VBoxContainer/MusicVolume/HSplitContainer"]
margin_right = 156.0
margin_bottom = 16.0
value = 100.0
tick_count = 4

[node name="Label" type="Label" parent="VBoxContainer/MusicVolume/HSplitContainer"]
margin_left = 168.0
margin_top = 1.0
margin_right = 214.0
margin_bottom = 15.0
text = "100"

[node name="EffectsVolume" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 214.0
margin_bottom = 134.0

[node name="Label" type="Label" parent="VBoxContainer/EffectsVolume"]
margin_right = 214.0
margin_bottom = 14.0
text = "Effects Volume"

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/EffectsVolume"]
margin_top = 26.0
margin_right = 214.0
margin_bottom = 42.0
split_offset = 140

[node name="HSlider" type="HSlider" parent="VBoxContainer/EffectsVolume/HSplitContainer"]
margin_right = 156.0
margin_bottom = 16.0
value = 100.0
tick_count = 4

[node name="Label" type="Label" parent="VBoxContainer/EffectsVolume/HSplitContainer"]
margin_left = 168.0
margin_top = 1.0
margin_right = 214.0
margin_bottom = 15.0
text = "100"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 214.0
margin_bottom = 158.0
text = "Back"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "Music"

[node name="EffectPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sound Effects"

[connection signal="value_changed" from="VBoxContainer/MasterVolume/HSplitContainer/HSlider" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicVolume/HSplitContainer/HSlider" to="." method="_on_music_voume_changed"]
[connection signal="value_changed" from="VBoxContainer/EffectsVolume/HSplitContainer/HSlider" to="." method="_on_effects_volume_changed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
